Decided to go with a top margin for all bookmark items.  This saves me the headache of trying to figure out the border overlap issue.  It also looks cleaner, is easier for the user to click on the right bookmark, and should make any further styling look better.

--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,8 @@ li {
   justify-content: space-between;
   border-color: black;
   border-style: solid;
-  border-width: 1px 1px 0px 1px;
+  border-width: 1px 1px 1px 1px;
+  margin-top: 10px;
   padding: 10px 50px;
 }
 
